@@ -173,7 +173,7 @@
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                     <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
-                    <argLine>--add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
+                    <argLine>-Djdk.attach.allowAttachSelf=true --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
                     <excludes>
                     </excludes>
                 </configuration>
